maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: not found: value getHauteurMonde
  if (coord(1) < getHauteurMonde - 1)
                 ^JediEscaper:30: error: not found: value getHauteurMonde
  if (coord(0) < getHauteurMonde - 1)
                 ^